Fix: tentative fix for z-index in Urb.Article

--- a/screens/urbania-article/src/urbania-article.module.scss
+++ b/screens/urbania-article/src/urbania-article.module.scss
@@ -103,20 +103,20 @@ $color-universities-text: #f33;
 }
 
 .background {
-    z-index: 0;
+    z-index: 1;
+}
+
+.video {
+    @extend %fullscreen;
 }
 
 .content {
     @extend %fullscreen;
     display: flex;
-    z-index: 1;
+    z-index: 2;
     flex-direction: column;
     width: 100%;
     height: 100%;
-}
-
-.video {
-    @extend %fullscreen;
 }
 
 .articleContent {
@@ -245,6 +245,16 @@ $color-universities-text: #f33;
     }
 }
 
+.visual {
+    z-index: 2;
+    height: 100%;
+}
+
+.callToActionContainer {
+    @extend %fullscreen;
+    z-index: 3;
+}
+
 .callToAction {
     position: absolute;
     z-index: 10;
@@ -276,10 +286,6 @@ $color-universities-text: #f33;
     display: block;
 }
 
-.videoContainer {
-    position: absolute;
-}
-
 .bottom {
     transition: opacity 0.15s linear;
     opacity: 0;
@@ -293,17 +299,7 @@ $color-universities-text: #f33;
     }
 }
 
-.callToActionContainer {
-    @extend %fullscreen;
-    z-index: 3;
-}
-
-.visual {
-    height: 100%;
-}
-
 .image {
-    // don't manage my size!
     position: relative !important;
     width: 100% !important;
     height: 100% !important;
